src/main/kotlin/icu/windea/pls/localisation/ParadoxLocalisation.bnf
// Copyright (c) 2021 DragonKnightOfBreeze Windea <dk_breeze@qq.com>
// All rights reserved.

// Grammar for Paradox Localisation.
// Notes:
// - Locale VS property key is resolved by the lexer.
// - Property values are lazy-parsed to support rich text features without over-tokenizing at top level.

{
  parserClass="icu.windea.pls.localisation.parser.ParadoxLocalisationParser"
  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"
  psiClassPrefix="ParadoxLocalisation"
  psiImplClassSuffix="Impl"
  psiPackage="icu.windea.pls.localisation.psi"
  psiImplPackage="icu.windea.pls.localisation.psi.impl"
  elementTypeHolderClass="icu.windea.pls.localisation.psi.ParadoxLocalisationElementTypes"
  tokenTypeFactory="icu.windea.pls.localisation.psi.ParadoxLocalisationElementTypeFactory.getTokenType"
  elementTypeFactory="icu.windea.pls.localisation.psi.ParadoxLocalisationElementTypeFactory.getElementType"
  psiImplUtilClass="icu.windea.pls.localisation.psi.impl.ParadoxLocalisationPsiImplUtil"
  parserUtilClass="icu.windea.pls.localisation.parser.ParadoxLocalisationParserUtil"
  methods(".*")=[getResolveScope getUseScope toString]
  tokens=[
    // EOL="<eol>" // unused atm
    AT="@"
    PIPE="|"
    COLON=":"
    COMMA=","
  ]
}

// common rules

root ::= property_list*

private comment ::= COMMENT {
  name="comment"
}

property_list ::= comment* ( property_item_list_with_locale | property_item_list ) {
  name="property list"
  extends="icu.windea.pls.localisation.psi.impl.ParadoxLocalisationStubElementImpl<?>"
  stubClass="icu.windea.pls.localisation.psi.stubs.ParadoxLocalisationPropertyListStub"
  implements=[
    "com.intellij.psi.PsiListLikeElement"
  ]
  methods=[
    getComponents
    getIcon getIElementType
  ]
}
private property_item_list_with_locale ::= locale property_items? { pin=1 }
private property_item_list ::= property_items
private property_items ::= property_item+
private property_item ::= comment | property {
  // recoverWhile="#auto" // continue parsing
  recoverWhile=property_item_recover // continue parsing
}
private property_item_recover ::= !( comment | LOCALE_TOKEN | PROPERTY_KEY_TOKEN )

locale ::= LOCALE_TOKEN COLON {
  name="locale"
  pin=1
  extends="icu.windea.pls.localisation.psi.impl.ParadoxLocalisationStubElementImpl<?>"
  stubClass="icu.windea.pls.localisation.psi.stubs.ParadoxLocalisationLocaleStub"
  implements=[
    "com.intellij.psi.NavigatablePsiElement"
  ]
  methods=[
    getIdElement
    getIcon getName setName getIElementType
    getPresentation getReference getReferences
  ]
}

property ::= property_key COLON property_number? property_value {
  name="property"
  pin=1
  extends="icu.windea.pls.localisation.psi.impl.ParadoxLocalisationStubElementImpl<?>"
  stubClass="icu.windea.pls.localisation.psi.stubs.ParadoxLocalisationPropertyStub"
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationNamedElement"
    "icu.windea.pls.core.psi.PsiPresentableTextAwareElement"
    "com.intellij.psi.NavigatablePsiElement"
  ]
  methods=[
    getIcon getName setName getNameIdentifier getTextOffset getType getValue setValue
    getIElementType isEquivalentTo getPresentableText
    getPresentation
  ]
}

property_key ::= PROPERTY_KEY_TOKEN {
  name="property key"
  methods=[
    getIdElement
    getIcon getName setName
  ]
}

// The number seen in vanilla files right after the colon can be omitted, as it is only useful for Paradox’s internal translation tracking
// see: https://stellaris.paradoxwikis.com/Localisation_modding
// see: https://twitter.com/Martin_Anward/status/1039175213773144066
private property_number ::= PROPERTY_NUMBER_TOKEN {
  name="property number"
}

// lazy-parsing PROPERTY_VALUE_TOKEN
property_value ::= property_value_content  {
  name="property value"
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationRichTextContainer"
    "icu.windea.pls.core.psi.PsiQuoteAwareElement"
  ]
  methods=[
    getTokenElement getRichTextList
    getQuotePattern
  ]
}
// NOTE 3.0.2 split out quote tokens
// NOTE 3.0.2 compatible with missing opening quote and missing closing quote
private property_value_content ::= property_value_quoted | property_value_unquoted
private property_value_quoted ::= LEFT_QUOTE PROPERTY_VALUE_TOKEN? RIGHT_QUOTE? { pin=1 }
private property_value_unquoted ::= PROPERTY_VALUE_TOKEN RIGHT_QUOTE?

// within localisation text rules (lazy-parsing, from PROPERTY_VALUE_TOKEN)

text_root ::= string? tag_part? string_variant_set? {
  extraRoot=true
}
private string ::= string_item+
private string_item ::= rich_text | COLORFUL_TEXT_END | TEXT_FORMAT_END

// rich text rules

rich_text ::= text | colorful_text | parameter | command | concept_command | icon | text_icon | text_format {
  implements=[
    "icu.windea.pls.core.psi.PsiPresentableTextAwareElement"
    "com.intellij.psi.NavigatablePsiElement"
  ]
  methods=[
    getPresentation
  ]
}

text ::= TEXT_TOKEN {
  extends=rich_text
}

// localisation colorful text rules

// see: https://stellaris.paradoxwikis.com/Localisation_modding#Color_Codes
// end marker is optional
colorful_text ::= COLORFUL_TEXT_START color_name colorful_text_string? COLORFUL_TEXT_END? {
  pin=1
  extends=rich_text
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationTextColorAwareElement"
    "icu.windea.pls.localisation.psi.ParadoxLocalisationRichTextContainer"
  ]
  methods=[
    getIdElement
    getName setName getPresentableText
    getPresentation getReference getReferences
  ]
}
private color_name ::= COLOR_TOKEN
private colorful_text_string ::= colorful_text_string_item+
private colorful_text_string_item ::= rich_text | TEXT_FORMAT_END

// localisation parameter rules

// see: https://stellaris.paradoxwikis.com/Localisation_modding#.24_Codes
// may be resolved to localisation, parameter, or system statistics in GUI elements
parameter ::= PARAMETER_START parameter_name parameter_tail? parameter_suffix? PARAMETER_END {
  pin=1
  extends=rich_text
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationInterpolation"
    "icu.windea.pls.localisation.psi.ParadoxLocalisationInterpolationContainer"
    "icu.windea.pls.localisation.psi.ParadoxLocalisationArgumentAwareElement"
  ]
  methods=[
    getIdElement getArgumentElement parameter_argument="" command=""
    getName setName getPresentableText
    getPresentation getReference getReferences
  ]
}
// can be command or scripted variable reference
private parameter_name ::= PARAMETER_TOKEN | command | scripted_variable_reference
private parameter_tail ::= context_tag_part
private parameter_suffix ::= PIPE parameter_argument?
parameter_argument ::= ARGUMENT_TOKEN {
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationArgument"
    "icu.windea.pls.localisation.psi.ParadoxLocalisationTextColorAwareElement"
  ]
  methods=[
    getIdElement
    getValue getPresentableText
    getPresentation getReference getReferences
  ]
}
// scripted variable reference (in parameters)
scripted_variable_reference ::= AT SCRIPTED_VARIABLE_REFERENCE_TOKEN {
  implements=[
    "icu.windea.pls.lang.psi.ParadoxScriptedVariableReference"
    "icu.windea.pls.localisation.psi.ParadoxLocalisationMacro"
  ]
  methods=[
    getIdElement
    getIcon getName setName
    getPresentation getReference getReferences
  ]
}

// localisation command rules

// see: https://stellaris.paradoxwikis.com/Localisation_modding#Bracket_Commands
command ::= <<isCommand>> LEFT_BRACKET command_text? context_tag_part? command_tail? command_suffix? RIGHT_BRACKET {
  pin=2
  extends=rich_text
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationInterpolation"
    "icu.windea.pls.localisation.psi.ParadoxLocalisationArgumentAwareElement"
  ]
  methods=[
    getArgumentElement command_argument=""
    getIcon getPresentableText
    getPresentation
  ]
}
command_text ::= command_text_content {
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationExpressionElement"
    "icu.windea.pls.localisation.psi.ParadoxLocalisationInterpolationContainer"
  ]
  methods=[
    getIdElement parameter=""
    getName getValue setValue setContent getPresentableText
    getPresentation getReference getReferences
  ]
}
// can be parameterized (by using parameters)
private command_text_content ::= ( COMMAND_TEXT_TOKEN | parameter )+
private command_tail ::= context_tag_part | tag_sensitive_text
private command_suffix ::= PIPE command_argument?
command_argument ::= command_argument_name {
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationArgument"
    "icu.windea.pls.localisation.psi.ParadoxLocalisationInterpolationContainer"
    "icu.windea.pls.localisation.psi.ParadoxLocalisationTextColorAwareElement"
  ]
  methods=[
    getIdElement parameter=""
    getValue getPresentableText
    getPresentation getReference getReferences
  ]
}
// can be parameterized (by using parameters)
private command_argument_name ::= ( ARGUMENT_TOKEN | parameter )+

// [stellaris] localisation concept command rules (as special command rules)

concept_command ::= LEFT_BRACKET LEFT_SINGLE_QUOTE concept_name? RIGHT_SINGLE_QUOTE ( COMMA concept_string? )? RIGHT_BRACKET {
  pin=2
  extends=rich_text
  methods=[
    getIcon getName setName getPresentableText
    getPresentation getReference getReferences
  ]
}
concept_name ::= concept_name_content {
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationExpressionElement"
    "icu.windea.pls.localisation.psi.ParadoxLocalisationInterpolationContainer"
  ]
  methods=[
    getIdElement parameter=""
    getName getValue setValue setContent getPresentableText
    getPresentation getReference getReferences
  ]
}
// can be parameterized (by using parameters)
private concept_name_content ::= ( CONCEPT_NAME_TOKEN | parameter )+
concept_string ::= concept_string_item+ {
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationRichTextContainer"
  ]
}
private concept_string_item ::= rich_text | COLORFUL_TEXT_END | TEXT_FORMAT_END

// localisation icon rules

icon ::= ICON_START icon_name icon_suffix? ICON_END {
  pin=1
  extends=rich_text
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationInterpolationContainer"
    "icu.windea.pls.localisation.psi.ParadoxLocalisationArgumentAwareElement"
  ]
  methods=[
    getIdElement getArgumentElement icon_argument="" rich_text=""
    getIcon getName setName getPresentableText
    getPresentation getReference getReferences
  ]
}
// can be parameterized (by using parameters and commands)
private icon_name ::= ( ICON_TOKEN | parameter | command )+
private icon_suffix ::= PIPE icon_argument?
icon_argument ::= icon_argument_name {
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationArgument"
    "icu.windea.pls.localisation.psi.ParadoxLocalisationInterpolationContainer"
  ]
  methods=[
    getIdElement rich_text=""
    getValue getPresentableText
    getPresentation
  ]
}
// can be parameterized (by using parameters and commands)
private icon_argument_name ::= ( ARGUMENT_TOKEN | parameter | command )+

// [ck3, vic3, eu5] localisation text icon rules

text_icon ::= TEXT_ICON_START text_icon_name TEXT_ICON_END {
  pin=1
  extends=rich_text
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationInterpolationContainer"
  ]
  methods=[
    getIdElement rich_text=""
    getIcon getName setName getPresentableText
    getPresentation getReference getReferences
  ]
}
// can be parameterized (by using parameters and commands)
private text_icon_name ::= ( TEXT_ICON_TOKEN | parameter | command )+

// [ck3, vic3, eu5] localisation text format rules

// end marker is optional
text_format ::= TEXT_FORMAT_START text_format_name text_format_string? TEXT_FORMAT_END? {
  pin=1
  extends=rich_text
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationInterpolationContainer"
  ]
  methods=[
    getIdElement rich_text=""
    getIcon getName setName getPresentableText
    getPresentation getReference getReferences
  ]
}
// can be parameterized (by using parameters and commands)
private text_format_name ::= ( TEXT_FORMAT_TOKEN | parameter | command )+
text_format_string ::= text_format_string_item+ {
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationRichTextContainer"
  ]
}
private text_format_string_item ::= rich_text | COLORFUL_TEXT_END

// grammatical syntax
// see: localisation/99_README_GRAMMAR.txt
// available for any (at least major) game types at this moment

// tag rules

tag ::= TAG_TOKEN {
  implements=[
    "com.intellij.psi.NavigatablePsiElement"
  ]
  methods=[
    getIdElement
    getName
    getPresentation
  ]
}

context_tag ::= CONTEXT_TAG_TOKEN {
  implements=[
    "com.intellij.psi.NavigatablePsiElement"
  ]
  methods=[
    getIdElement
    getName
    getPresentation
  ]
}

// string variant set rules
// e.g., `|||B|||t1:C|||t2,t3:D` in `A|||B|||t1:C|||t2,t3:D`

string_variant_set ::= string_variant+
string_variant ::= STRING_VARIANT_PREFIX string_variant_tag_part? string_variant_string? tag_part? {
  pin=1
}
string_variant_tag_part ::= tag ( COMMA tag )* COLON
string_variant_string ::= string_variant_string_item+ {
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationRichTextContainer"
  ]
}
private string_variant_string_item ::= rich_text | COLORFUL_TEXT_END | TEXT_FORMAT_END

// tag-sensitive text rules
// e.g., `::a <1>`

tag_sensitive_text ::= TAG_SENSITIVE_TEXT_PREFIX tag_sensitive_text_string? tag_part? string_variant_set? {
  pin=1
}
tag_sensitive_text_string ::= tag_sensitive_text_item+ {
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationRichTextContainer"
  ]
}
private tag_sensitive_text_item ::= tagged_parameter | rich_text | COLORFUL_TEXT_END | TEXT_FORMAT_END

tagged_parameter ::= TAGGED_PARAMETER_START tagged_parameter_name TAGGED_PARAMETER_END {
  pin=1
  implements=[
    "icu.windea.pls.localisation.psi.ParadoxLocalisationMacro"
  ]
  methods=[
    getIdElement
    getName setName getPresentableText
    getPresentation
  ]
}
private tagged_parameter_name ::= PARAMETER_TOKEN // still use `PARAMETER_TOKEN` here , same as `parameter`

// tag part rules
// e.g., `&!t1,t2` in `text&!t1,t2`

tag_part ::= TAG_PART_PREFIX tag ( COMMA tag )* {
  pin=1
}

// context tag part rules
// e.g., `&t` in `$1&t$`
// e.g., `&t` in `[From.GetName&t]`

context_tag_part ::= CONTEXT_TAG_PART_PREFIX context_tag {
  pin=1
}
