src/main/gen/icu/windea/pls/localisation/parser/ParadoxLocalisationParser.java
// This is a generated file. Not intended for manual editing.
package icu.windea.pls.localisation.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static icu.windea.pls.localisation.psi.ParadoxLocalisationElementTypes.*;
import static icu.windea.pls.localisation.parser.ParadoxLocalisationParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class ParadoxLocalisationParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    boolean r;
    if (t == TEXT_ROOT) {
      r = text_root(b, l + 1);
    }
    else {
      r = root(b, l + 1);
    }
    return r;
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(COLORFUL_TEXT, COMMAND, CONCEPT_COMMAND, ICON,
      PARAMETER, RICH_TEXT, TEXT, TEXT_FORMAT,
      TEXT_ICON),
  };

  /* ********************************************************** */
  // COLOR_TOKEN
  static boolean color_name(PsiBuilder b, int l) {
    return consumeToken(b, COLOR_TOKEN);
  }

  /* ********************************************************** */
  // COLORFUL_TEXT_START color_name colorful_text_string? COLORFUL_TEXT_END?
  public static boolean colorful_text(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "colorful_text")) return false;
    if (!nextTokenIs(b, COLORFUL_TEXT_START)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, COLORFUL_TEXT, null);
    r = consumeToken(b, COLORFUL_TEXT_START);
    p = r; // pin = 1
    r = r && report_error_(b, color_name(b, l + 1));
    r = p && report_error_(b, colorful_text_2(b, l + 1)) && r;
    r = p && colorful_text_3(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // colorful_text_string?
  private static boolean colorful_text_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "colorful_text_2")) return false;
    colorful_text_string(b, l + 1);
    return true;
  }

  // COLORFUL_TEXT_END?
  private static boolean colorful_text_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "colorful_text_3")) return false;
    consumeToken(b, COLORFUL_TEXT_END);
    return true;
  }

  /* ********************************************************** */
  // colorful_text_string_item+
  static boolean colorful_text_string(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "colorful_text_string")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = colorful_text_string_item(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!colorful_text_string_item(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "colorful_text_string", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // rich_text | TEXT_FORMAT_END
  static boolean colorful_text_string_item(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "colorful_text_string_item")) return false;
    boolean r;
    r = rich_text(b, l + 1);
    if (!r) r = consumeToken(b, TEXT_FORMAT_END);
    return r;
  }

  /* ********************************************************** */
  // <<isCommand>> LEFT_BRACKET command_text? context_tag_part? command_tail? command_suffix? RIGHT_BRACKET
  public static boolean command(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, COMMAND, "<command>");
    r = isCommand(b, l + 1);
    r = r && consumeToken(b, LEFT_BRACKET);
    p = r; // pin = 2
    r = r && report_error_(b, command_2(b, l + 1));
    r = p && report_error_(b, command_3(b, l + 1)) && r;
    r = p && report_error_(b, command_4(b, l + 1)) && r;
    r = p && report_error_(b, command_5(b, l + 1)) && r;
    r = p && consumeToken(b, RIGHT_BRACKET) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // command_text?
  private static boolean command_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_2")) return false;
    command_text(b, l + 1);
    return true;
  }

  // context_tag_part?
  private static boolean command_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_3")) return false;
    context_tag_part(b, l + 1);
    return true;
  }

  // command_tail?
  private static boolean command_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_4")) return false;
    command_tail(b, l + 1);
    return true;
  }

  // command_suffix?
  private static boolean command_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_5")) return false;
    command_suffix(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // command_argument_name
  public static boolean command_argument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_argument")) return false;
    if (!nextTokenIs(b, "<command argument>", ARGUMENT_TOKEN, PARAMETER_START)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMMAND_ARGUMENT, "<command argument>");
    r = command_argument_name(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ( ARGUMENT_TOKEN | parameter )+
  static boolean command_argument_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_argument_name")) return false;
    if (!nextTokenIs(b, "", ARGUMENT_TOKEN, PARAMETER_START)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = command_argument_name_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!command_argument_name_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "command_argument_name", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // ARGUMENT_TOKEN | parameter
  private static boolean command_argument_name_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_argument_name_0")) return false;
    boolean r;
    r = consumeToken(b, ARGUMENT_TOKEN);
    if (!r) r = parameter(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // PIPE command_argument?
  static boolean command_suffix(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_suffix")) return false;
    if (!nextTokenIs(b, PIPE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PIPE);
    r = r && command_suffix_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // command_argument?
  private static boolean command_suffix_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_suffix_1")) return false;
    command_argument(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // context_tag_part | tag_sensitive_text
  static boolean command_tail(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_tail")) return false;
    if (!nextTokenIs(b, "", CONTEXT_TAG_PART_PREFIX, TAG_SENSITIVE_TEXT_PREFIX)) return false;
    boolean r;
    r = context_tag_part(b, l + 1);
    if (!r) r = tag_sensitive_text(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // command_text_content
  public static boolean command_text(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_text")) return false;
    if (!nextTokenIs(b, "<command text>", COMMAND_TEXT_TOKEN, PARAMETER_START)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMMAND_TEXT, "<command text>");
    r = command_text_content(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ( COMMAND_TEXT_TOKEN | parameter )+
  static boolean command_text_content(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_text_content")) return false;
    if (!nextTokenIs(b, "", COMMAND_TEXT_TOKEN, PARAMETER_START)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = command_text_content_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!command_text_content_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "command_text_content", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMAND_TEXT_TOKEN | parameter
  private static boolean command_text_content_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_text_content_0")) return false;
    boolean r;
    r = consumeToken(b, COMMAND_TEXT_TOKEN);
    if (!r) r = parameter(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // COMMENT
  static boolean comment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comment")) return false;
    if (!nextTokenIs(b, "<comment>", COMMENT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, null, "<comment>");
    r = consumeToken(b, COMMENT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LEFT_BRACKET LEFT_SINGLE_QUOTE concept_name? RIGHT_SINGLE_QUOTE ( COMMA concept_string? )? RIGHT_BRACKET
  public static boolean concept_command(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "concept_command")) return false;
    if (!nextTokenIs(b, LEFT_BRACKET)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONCEPT_COMMAND, null);
    r = consumeTokens(b, 2, LEFT_BRACKET, LEFT_SINGLE_QUOTE);
    p = r; // pin = 2
    r = r && report_error_(b, concept_command_2(b, l + 1));
    r = p && report_error_(b, consumeToken(b, RIGHT_SINGLE_QUOTE)) && r;
    r = p && report_error_(b, concept_command_4(b, l + 1)) && r;
    r = p && consumeToken(b, RIGHT_BRACKET) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // concept_name?
  private static boolean concept_command_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "concept_command_2")) return false;
    concept_name(b, l + 1);
    return true;
  }

  // ( COMMA concept_string? )?
  private static boolean concept_command_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "concept_command_4")) return false;
    concept_command_4_0(b, l + 1);
    return true;
  }

  // COMMA concept_string?
  private static boolean concept_command_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "concept_command_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && concept_command_4_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // concept_string?
  private static boolean concept_command_4_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "concept_command_4_0_1")) return false;
    concept_string(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // concept_name_content
  public static boolean concept_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "concept_name")) return false;
    if (!nextTokenIs(b, "<concept name>", CONCEPT_NAME_TOKEN, PARAMETER_START)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONCEPT_NAME, "<concept name>");
    r = concept_name_content(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ( CONCEPT_NAME_TOKEN | parameter )+
  static boolean concept_name_content(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "concept_name_content")) return false;
    if (!nextTokenIs(b, "", CONCEPT_NAME_TOKEN, PARAMETER_START)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = concept_name_content_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!concept_name_content_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "concept_name_content", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // CONCEPT_NAME_TOKEN | parameter
  private static boolean concept_name_content_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "concept_name_content_0")) return false;
    boolean r;
    r = consumeToken(b, CONCEPT_NAME_TOKEN);
    if (!r) r = parameter(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // concept_string_item+
  public static boolean concept_string(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "concept_string")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONCEPT_STRING, "<concept string>");
    r = concept_string_item(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!concept_string_item(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "concept_string", c)) break;
    }
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // rich_text | COLORFUL_TEXT_END | TEXT_FORMAT_END
  static boolean concept_string_item(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "concept_string_item")) return false;
    boolean r;
    r = rich_text(b, l + 1);
    if (!r) r = consumeToken(b, COLORFUL_TEXT_END);
    if (!r) r = consumeToken(b, TEXT_FORMAT_END);
    return r;
  }

  /* ********************************************************** */
  // CONTEXT_TAG_TOKEN
  public static boolean context_tag(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "context_tag")) return false;
    if (!nextTokenIs(b, CONTEXT_TAG_TOKEN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONTEXT_TAG_TOKEN);
    exit_section_(b, m, CONTEXT_TAG, r);
    return r;
  }

  /* ********************************************************** */
  // CONTEXT_TAG_PART_PREFIX context_tag
  public static boolean context_tag_part(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "context_tag_part")) return false;
    if (!nextTokenIs(b, CONTEXT_TAG_PART_PREFIX)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONTEXT_TAG_PART, null);
    r = consumeToken(b, CONTEXT_TAG_PART_PREFIX);
    p = r; // pin = 1
    r = r && context_tag(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // ICON_START icon_name icon_suffix? ICON_END
  public static boolean icon(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "icon")) return false;
    if (!nextTokenIs(b, ICON_START)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ICON, null);
    r = consumeToken(b, ICON_START);
    p = r; // pin = 1
    r = r && report_error_(b, icon_name(b, l + 1));
    r = p && report_error_(b, icon_2(b, l + 1)) && r;
    r = p && consumeToken(b, ICON_END) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // icon_suffix?
  private static boolean icon_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "icon_2")) return false;
    icon_suffix(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // icon_argument_name
  public static boolean icon_argument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "icon_argument")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ICON_ARGUMENT, "<icon argument>");
    r = icon_argument_name(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ( ARGUMENT_TOKEN | parameter | command )+
  static boolean icon_argument_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "icon_argument_name")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = icon_argument_name_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!icon_argument_name_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "icon_argument_name", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // ARGUMENT_TOKEN | parameter | command
  private static boolean icon_argument_name_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "icon_argument_name_0")) return false;
    boolean r;
    r = consumeToken(b, ARGUMENT_TOKEN);
    if (!r) r = parameter(b, l + 1);
    if (!r) r = command(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // ( ICON_TOKEN | parameter | command )+
  static boolean icon_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "icon_name")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = icon_name_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!icon_name_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "icon_name", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // ICON_TOKEN | parameter | command
  private static boolean icon_name_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "icon_name_0")) return false;
    boolean r;
    r = consumeToken(b, ICON_TOKEN);
    if (!r) r = parameter(b, l + 1);
    if (!r) r = command(b, l + 1);
    return r;
  }
